=======
CHANGES
=======

Version 0.5.1dev (unreleased)
-----------------------------

- Fixed advanced batching implementation, and extracted it in a separate
  function

- Implemented GetAttrFormatterColumn. This column can be used for simple 
  value formatting columns.

- Bad typo in columns.py: Renamed ``getLinkConent`` to ``getLinkContent``

- Bug: Changed return string in getLinkCSS. It was using css="" instead of
  class="" for CSS classes. Thanks to Dan for reporting this bugs.

- Implemented SelectedItemColumn

- Fix CheckBoxColumn, use always the correct selectedItems. Use always real
  selectedItems form the table

- Fix RadioColumn, use always the correct selectedItem from the selectedItems 
  list. Use always the first selectedItems form the tables selectedItems


Version 0.5.0 (2008-04-13)
--------------------------

- Initial Release