@@ -5,6 +5,11 @@ CHANGES
 Version 0.5.1dev (unreleased)
 -----------------------------
 
+- Bugfix: CheckBoxColumn, ensure that we allways use a list for compare
+  selected items. It was possible that if only one item get selected
+  we compared a string. If this string was a sub string of another existing
+  item the other item get selected too.
+
 - Fixed advanced batching implementation, and extracted it in a separate
   function
 
